cmake_minimum_required(VERSION 2.6)

PROJECT(IProfStaticLib)

FIND_PACKAGE(GLUT REQUIRED)
IF (GLUT_FOUND)
MESSAGE("GLUT FOUND")
MESSAGE(${GLUT_glut_LIBRARY})
ELSE (GLUT_FOUND)
MESSAGE("GLUT NOT FOUND")
ENDIF (GLUT_FOUND)

IF (WIN32)
  #INCLUDE_DIRECTORIES(${EDUNET_GAMES_SOURCE_DIR}/Glut)
ELSE (WIN32)
  INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR}) 
ENDIF (WIN32)

SET(IPROF_SOURCES 
prof_draw.c
prof_gather.c
prof_process.c
)


SET(IPROF_HEADERS
prof.h
prof_gather.h
prof_internal.h
)

IF (WIN32)
	SET(IPROF_PLATTFORM_SOURCES 
	prof_win32.c
	)

	SET(IPROF_PLATTFORM_HEADERS
	prof_win32.h
	)
ELSE (WIN32)
	SET(IPROF_PLATTFORM_SOURCES 
	prof_unix.c
	)

	SET(IPROF_PLATTFORM_HEADERS
	prof_unix.h
	)
ENDIF (WIN32)

ADD_LIBRARY(IProf STATIC ${IPROF_SOURCES}  ${IPROF_PLATTFORM_SOURCES})


INSTALL(TARGETS IProf
        DESTINATION lib)

INSTALL(FILES ${IPROF_HEADERS} ${IPROF_PLATTFORM_HEADERS}
        DESTINATION include/iprof)
