add_subdirectory(EduNetMemory)
add_subdirectory(EduNetCore)
add_subdirectory(EduNetCommon)
add_subdirectory(EduNetProfile)
add_subdirectory(EduNetModule)
add_subdirectory(EduNetConnect)
add_subdirectory(EduNetApplication)
# collect all base libs
#edunet_collect_subproject_directory_names(EDUNET_CORE_DIRS "CMakeLists.txt")
#add_subdirectories(" + " "Core" ${EDUNET_CORE_DIRS} )

